--- a/pages/subpages/mall/scenic/subpages/scenic-detail/index.wxss
+++ b/pages/subpages/mall/scenic/subpages/scenic-detail/index.wxss
@@ -415,6 +415,27 @@
   margin-top: 24rpx;
 }
 
+.merchant-btn {
+  margin-top: 24rpx;
+  width: 160rpx;
+  height: 58rpx;
+  color: var(--gold-1);
+  font-size: 26rpx;
+  font-weight: bold;
+  background: var(--blue-linear-2);
+  border-radius: 18rpx;
+}
+
+.qa-btn {
+  margin-top: 24rpx;
+  width: 140rpx;
+  height: 56rpx;
+  color: #fff;
+  font-size: 24rpx;
+  background: var(--blue-1);
+  border-radius: 28rpx;
+}
+
 .no-more-tips {
   margin-top: 24rpx;
   color: #999;
