--- a/pages/subpages/mall/catering/subpages/restaurant-detail/index.wxml
+++ b/pages/subpages/mall/catering/subpages/restaurant-detail/index.wxml
@@ -129,7 +129,13 @@
       restaurantName="{{restaurantInfo.name}}"
     />
   </view>
-  <empty-illus wx:if="{{!restaurantInfo.mealTicketList.length}}" desc="暂无代金券" height="520rpx" />
+  <empty-illus 
+    wx:if="{{!restaurantInfo.mealTicketList.length}}" 
+    desc="暂无代金券" 
+    height="520rpx" 
+  >
+    <view class="merchant-btn row center" bindtap="settleIn">商家入驻</view>
+  </empty-illus>
 
   <view class="content-title-wrap">
     <view class="content-title">套餐</view>
@@ -189,7 +195,13 @@
       <image class="more-icon" src="./images/more.png" />
     </view>
   </view>
-  <empty-illus wx:if="{{!qaSummary.total}}" desc="暂无问答" btnContent="去提问" bind:btnClick="checkQa" height="520rpx" />
+  <empty-illus 
+    wx:if="{{!qaSummary.total}}" 
+    desc="暂无问答"
+    height="520rpx"
+  >
+    <view class="qa-btn row center" bindtap="checkQa">去提问</view>
+  </empty-illus>
 
   <view class="content-title-wrap">
     <view class="content-title">达人打卡</view>
