--- a/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxss
+++ b/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxss
@@ -354,11 +354,6 @@
   color: #333;
   font-size: 10px;
 }
-/* .tenant-picker {
-  color: #333;
-  font-size: 14px;
-  font-weight: 550;
-} */
 .date-picker-arrow {
   color: #666;
   font-size: 10px;
@@ -625,6 +620,27 @@
 
 .media-wrap {
   margin-top: 24rpx;
+}
+
+.merchant-btn {
+  margin-top: 24rpx;
+  width: 160rpx;
+  height: 58rpx;
+  color: var(--gold-1);
+  font-size: 26rpx;
+  font-weight: bold;
+  background: var(--blue-linear-2);
+  border-radius: 18rpx;
+}
+
+.qa-btn {
+  margin-top: 24rpx;
+  width: 140rpx;
+  height: 56rpx;
+  color: #fff;
+  font-size: 24rpx;
+  background: var(--blue-1);
+  border-radius: 28rpx;
 }
 
 .no-more-tips {
