--- a/pages/tab-bar-pages/home/index.wxml
+++ b/pages/tab-bar-pages/home/index.wxml
@@ -44,10 +44,11 @@
         <follow-media-item wx:for="{{followMediaList}}" wx:key="index" item="{{item}}" />
         <empty-illus 
           wx:if="{{!userInfo || (followFinished && !followMediaList.length)}}" 
-          btnContent="{{!userInfo ? '点击登录' : ''}}" 
           desc="{{userInfo ? '暂无关注列表' : '您还未登录'}}" 
           bind:btnClick="register"
-        />
+        >
+          <view class="login-btn row center" wx:if="{{!userInfo}}" bindtap="register">点击登录</view>
+        </empty-illus>
         <view class="no-more-tips" wx:if="{{followFinished && followMediaList.length}}">～没有更多了～</view>
       </view>
     </scroll-view>
