--- a/pages/tab-bar-pages/home/index.wxss
+++ b/pages/tab-bar-pages/home/index.wxss
@@ -138,6 +138,16 @@
   font-size: 20rpx;
 }
 
+.login-btn {
+  margin-top: 24rpx;
+  width: 160rpx;
+  height: 56rpx;
+  color: #fff;
+  font-size: 24rpx;
+  background: var(--blue-1);
+  border-radius: 28rpx;
+}
+
 .loading {
   padding: 16rpx 0 24rpx;
   color: #999;
