feat: 商品订单退款

--- a/pages/subpages/mine/order/components/goods-order-item/index.wxml
+++ b/pages/subpages/mine/order/components/goods-order-item/index.wxml
@@ -30,7 +30,7 @@
       <view class="btn-wrap">
         <button 
           class="btn" 
-          wx:if="{{item.status === 102 || item.status === 103 || item.status === 104 || item.status === 203}}" 
+          wx:if="{{item.status === 102 || item.status === 103 || item.status === 104}}" 
           catchtap="deleteOrder"
           hover-class="none"
         >删除订单</button>
