--- a/pages/subpages/mine/utils/order.wxs
+++ b/pages/subpages/mine/utils/order.wxs
@@ -22,7 +22,7 @@ function paymentDesc(status) {
   var desc = '应付款';
   if (status === 101) {
     desc = '需付款';
-  } else if (status === 201 || status === 301 || status === 401 || status === 402) {
+  } else if (status === 201 || status === 204 || status === 301 || status === 401 || status === 402) {
     desc = '实付款';
   }
   return desc;
