--- a/pages/subpages/mine/utils/order.wxs
+++ b/pages/subpages/mine/utils/order.wxs
@@ -1,34 +1,51 @@
 function statusDesc(status) {
-  var desc = '';
+  var desc = "";
   if (status === 101) {
-    desc = '待付款';
+    desc = "待付款";
   } else if (status === 102 || status === 103 || status === 104) {
-    desc = '交易关闭';
+    desc = "交易关闭";
   } else if (status === 201 || status === 202) {
-    desc = '待发货';
+    desc = "待发货";
   } else if (status === 203) {
-    desc = '退款申请中';
+    desc = "退款申请中";
   } else if (status === 204) {
-    desc = '退款成功';
+    desc = "退款成功";
   } else if (status === 301) {
-    desc = '待收货';
-  } else if (status === 401 || status === 402 || status === 501) {
-    desc = '交易成功';
+    desc = "待收货";
+  } else if (status === 302) {
+    desc = "待使用";
+  } else if (
+    status === 401 ||
+    status === 402 ||
+    status === 403 ||
+    status === 501 ||
+    status === 502
+  ) {
+    desc = "交易成功";
   }
   return desc;
 }
 
 function paymentDesc(status) {
-  var desc = '应付款';
+  var desc = "应付款";
   if (status === 101) {
-    desc = '需付款';
-  } else if (status === 201 || status === 204 || status === 301 || status === 401 || status === 402) {
-    desc = '实付款';
+    desc = "需付款";
+  } else if (
+    status === 201 ||
+    status === 202 ||
+    status === 204 ||
+    status === 301 ||
+    status === 302 ||
+    status === 401 ||
+    status === 402 ||
+    status === 403
+  ) {
+    desc = "实付款";
   }
   return desc;
 }
 
 module.exports = {
   statusDesc: statusDesc,
-  paymentDesc: paymentDesc,
-}
+  paymentDesc: paymentDesc
+};
