--- a/pages/subpages/home/media/note/index.wxss
+++ b/pages/subpages/home/media/note/index.wxss
@@ -1,3 +1,185 @@
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #fff;
+  z-index: 100;
+}
+
+.author-info-wrap {
+  padding-left: 8px;
+  height: 44px;
+  width: 540rpx;
+}
+.author-avatar {
+  margin-left: 10px;
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+}
+.name-wrap {
+  margin-left: 8px;
+  flex: 1;
+}
+.author-name {
+  color: #333;
+  font-size: 13px;
+  font-weight: bold;
+}
+.time {
+  color: #999;
+  font-size: 10px;
+}
+.follow-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 8px;
+  width: 50px;
+  height: 24px;
+  color: #fff;
+  font-size: 11px;
+  font-weight: bold;
+  border-radius: 12px;
+  background: #EE3769;
+}
+.follow-btn.invalid {
+  color: #b2b2b2;
+  background: #f1f1f1;
+}
+.more-icon {
+  margin-left: 8px;
+  width: 24px;
+  height: 24px;
+  border: 0.5px solid #e1e1e1;
+  border-radius: 50%;
+}
+
+.container {
+  padding-bottom: calc(100rpx + env(safe-area-inset-bottom));
+  min-height: 100vh;
+  background: #fff;
+}
+
+.note-imgs {
+  margin: 20rpx;
+  height: 980rpx;
+}
+.note-img {
+  width: 100%; 
+  height: 980rpx;
+  border-radius: 40rpx;
+}
+
+.address {
+  flex: 1;
+  color: #999;
+  font-size: 10px;
+}
+.address-icon {
+  margin-right: 4rpx;
+  width: 18rpx;
+  height: 18rpx;
+}
+.address-detail {
+  flex: 1;
+}
+
+.title {
+  padding: 0 24rpx;
+  color: #333;
+  font-size: 36rpx;
+  font-weight: bold;
+}
+.content {
+  margin-top: 12rpx;
+  margin-bottom: 24rpx;
+  padding: 0 24rpx;
+  color: #333;
+  font-size: 30rpx;
+}
+
+.comment-wrap {
+  margin: 24rpx;
+  margin-top: 0;
+  padding: 20rpx 24rpx;
+  background: #f5f6f8;
+  border-radius: 20rpx;
+}
+.comment-item {
+  display: flex;
+  align-items: baseline;
+  margin-bottom: 6rpx;
+  font-size: 26rpx;
+}
+.commentator-name {
+  color: #333;
+  font-weight: bold;
+}
+.comment-content {
+  flex: 1;
+  color: #666;
+}
+.explain {
+  margin-top: 6rpx;
+  color: #999;
+  font-size: 24rpx;
+}
+
+.btn-wrap {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  padding: 16rpx 24rpx calc(16rpx + env(safe-area-inset-bottom));
+  width: 100%;
+  background: #fff;
+  box-shadow: 0 0.8px 5px 0 rgba(0, 0, 0, .08);
+}
+.comment-btn {
+  display: flex;
+  align-items: center;
+}
+.user-avatar {
+  width: 60rpx;
+  height: 60rpx;
+  border-radius: 50%;
+}
+.comment-btn-desc {
+  margin-left: 12rpx;
+  padding: 0 24rpx;
+  flex: 1;
+  height: 68rpx;
+  font-size: 24rpx;
+  color: #999;
+  background: #f5f8fa;
+  border-radius: 34rpx;
+}
+.other-btns {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex: 1;
+}
+.btn-item {
+  position: relative;
+  font-size: 0;
+}
+.btn-icon {
+  width: 46rpx;
+  height: 46rpx;
+}
+.btn-data {
+  position: absolute;
+  top: -4rpx;
+  left: 46rpx;
+  color: #333;
+  font-size: 20rpx;
+  font-weight: bold;
+}
+
 .no-more-tips {
   padding: 24rpx 0;
   color: #999;
