--- a/components/product-list/index.wxml
+++ b/components/product-list/index.wxml
@@ -1,16 +1,13 @@
-<swiper 
-  class="product-list custom-dots {{ list.length > 1 ? 'show-dots' : '' }}" 
-  indicator-dots="{{list.length > 1}}" 
-  circular
->
-  <swiper-item 
+<scroll-view class="product-list row" scroll-x>
+  <view
+    class="product-item {{list.length === 1 ? 'filled' : ''}}"
     wx:for="{{list}}" 
     wx:key="index"
     catchtap="checkDetail" 
     data-type="{{item.type}}" 
     data-id="{{item.id}}"
   >
-    <view class="product-item row">
+    <view class="product-item-inner row">
       <view class="product-image-wrap">
         <image class="product-image" src="{{item.cover}}" mode="aspectFill" />
         <view class="type-tag row">{{['景点', '酒店',  '餐厅', '商品'][item.type - 1]}}</view>
@@ -27,5 +24,5 @@
         </view>
       </view>
     </view>
-  </swiper-item>
-</swiper>
+  </view>
+</scroll-view>
