--- a/pages/subpages/home/media/note/index.wxss
+++ b/pages/subpages/home/media/note/index.wxss
@@ -60,6 +60,7 @@
   padding-bottom: calc(100rpx + env(safe-area-inset-bottom));
   min-height: 100vh;
   background: #fff;
+  color: #1b1d1f;
 }
 
 .note-imgs {
@@ -73,20 +74,28 @@
 }
 
 .address {
-  flex: 1;
-  color: #999;
-  font-size: 10px;
+  margin-left: 24rpx;
+  padding: 0 18rpx;
+  width: fit-content;
+  height: 50rpx;
+  color: #1b1d1f;
+  font-size: 22rpx;
+  font-weight: bold;
+  background: #f5f8fa;
+  border-radius: 25rpx;
+}
+.address.active {
+  color: #fff;
+  background: var(--blue-1);
 }
 .address-icon {
   margin-right: 4rpx;
-  width: 18rpx;
-  height: 18rpx;
-}
-.address-detail {
-  flex: 1;
+  width: 20rpx;
+  height: 20rpx;
 }
 
 .title {
+  margin-top: 24rpx;
   padding: 0 24rpx;
   color: #333;
   font-size: 36rpx;
