--- a/pages/subpages/mall/catering/index.wxml
+++ b/pages/subpages/mall/catering/index.wxml
@@ -21,5 +21,5 @@
   </view>
 
   <empty-illus wx:if="{{finished && !restaurantList.length}}" desc="没有找到相关餐厅" />
-  <view class="no-more-tips" wx:if="{{finished && restaurantList.length}}">～没有更多了～</view>
+  <view class="no-more-tips" wx:if="{{finished && restaurantList.length}}">～到底了～</view>
 </view>
