--- a/pages/subpages/mall/goods/subpages/goods-detail/index.wxml
+++ b/pages/subpages/mall/goods/subpages/goods-detail/index.wxml
@@ -197,7 +197,7 @@
   </view>
 
   <!-- nomore -->
-  <view class="nomore-tip">～没有更多了～</view>
+  <view class="nomore-tip">～到底了～</view>
 </view>
 
 <!-- 底部工具栏 -->
