--- a/pages/subpages/mine/merchant/subpages/scenic-order/index.wxml
+++ b/pages/subpages/mine/merchant/subpages/scenic-order/index.wxml
@@ -26,5 +26,5 @@
     />
   </view>
   <empty-illus wx:if="{{finished && !orderList.length}}" desc="暂无订单列表" />
-  <view class="no-more-tips" wx:if="{{finished && orderList.length}}">～没有更多了～</view>
+  <view class="no-more-tips" wx:if="{{finished && orderList.length}}">～到底了～</view>
 </view>
