--- a/pages/tab-bar-pages/mall/index.wxml
+++ b/pages/tab-bar-pages/mall/index.wxml
@@ -46,6 +46,6 @@
     <image class="loading-icon" src="https://static.tiddler.cn/mp/loading.gif" />
     <text>加载中...</text>
   </view>
-  <view class="no-more-tips" wx:if="{{!isLoading && finished && productList.length}}">～没有更多了～</view>
+  <view class="no-more-tips" wx:if="{{!isLoading && finished && productList.length}}">～到底了～</view>
   <empty-illus wx:if="{{finished && !productList.length}}" desc="暂无列表" />
 </view>
