--- a/pages/subpages/mall/scenic/subpages/scenic-detail/subpages/evaluation-list/index.wxml
+++ b/pages/subpages/mall/scenic/subpages/scenic-detail/subpages/evaluation-list/index.wxml
@@ -2,5 +2,5 @@
   <evaluation-item wx:for="{{evaluationList}}" wx:key="index" item="{{item}}" />
 
   <empty-illus wx:if="{{finished && !evaluationList.length}}" desc="暂无用户点评" height="520rpx" />
-  <view class="no-more-tips" wx:if="{{finished && evaluationList.length}}">～到底了～</view>
+  <view class="no-more-tips" wx:if="{{finished && evaluationList.length}}">～到底啦～</view>
 </view>
