--- a/pages/subpages/mine/promoter/subpages/account/index.wxml
+++ b/pages/subpages/mine/promoter/subpages/account/index.wxml
@@ -130,6 +130,6 @@
       </view>
     </view>
   </view>
-  <view class="no-more-tips" wx:if="{{finished && orderList.length}}">～到底了～</view>
+  <view class="no-more-tips" wx:if="{{finished && orderList.length}}">～到底啦～</view>
   <empty-illus wx:if="{{!orderList.length}}" desc="暂无订单记录" height="500rpx" />
 </view>
