--- a/pages/subpages/home/media/components/input-popup/index.wxss
+++ b/pages/subpages/home/media/components/input-popup/index.wxss
@@ -1,12 +1,11 @@
 .input-wrap {
   position: fixed;
-  padding: 10px 15px;
+  padding: 12px;
   width: 100%;
   background: #fff;
-  border-radius: 10px 10px 0 0;
+  border-radius: 24px 24px 0 0;
 }
 .input {
-  margin-left: 5px;
   flex: 1;
   padding: 0 15px;
   height: 36px;
